Fixed logo on Firefox.

--- a/website/assets/css/stylesheet.css
+++ b/website/assets/css/stylesheet.css
@@ -51,6 +51,12 @@ nav {
 	padding: 5px;
 }
 
+@-moz-document url-prefix() {
+	.logo {
+		height: 5.5rem;
+	}
+}
+
 .side-logo {
 	margin: 50px 0 50px 0;
 }
